[package]
name = "pdf_summarizer_1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }
pdf-extract = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }